fixed swagger errors
